fixing left sidebar alignment

--- a/www/css/simple-sidebar.css
+++ b/www/css/simple-sidebar.css
@@ -38,9 +38,11 @@
     display: table;
 }
 
-#sidebar-helper {
+.sidebar-helper {
+    display: table-row;
+}
+.sidebar-helper ul {
     display: table-cell;
-    vertical-align: middle;
 }
 
 #wrapper.toggled #sidebar-wrapper {
